# XPhase

./: AGENTS.md  README.md  pyproject.toml
cases/: 40m_inverted_v_90ft_feedlines.json  40m_inverted_v_feedpoints_plus_y_7020khz.json
docs/: 01_problem_statement.md  02_math_contract.md  03_topology_contract.md  04_io_contract.md  05_validation_contract.md  06_ngspice_verification.md  FEEDLINE_POLARITY.md  FEEDLINE_TRANSFORM.md  ROADMAP.md
examples/: compare_40m_feedline_sweeps.py  evaluate_40m_static_bandwidth.py  optimize_40m_feedpoints_fixed_feedlines.py  optimize_40m_topology_a.py  optimize_40m_topology_b.py  sweep_40m_equal_feedline_lengths.py  sweep_40m_offset_feedline_lengths.py  transform_40m_feedpoints.py  verify_40m_with_ngspice.py
ltspice/: xphase_40m_topology_b.cir  xphase_40m_topology_b.op.raw  xphase_40m_topology_b.raw
ngspice/: xphase_40m_topology_b.cir
src/pns/: __init__.py  cases.py  feedline.py  feedline_sweep.py  lmatch.py  ltspice.py  ngspice.py  objectives.py  optimize.py  rfmath.py  static_bandwidth.py  stress.py  sweep_reporting.py  topology_a.py  topology_b.py
tests/: test_case_40m.py  test_complex_math.py  test_feedline.py  test_feedline_sweep.py  test_lmatch.py  test_ltspice.py  test_ngspice.py  test_objectives.py  test_optimize.py  test_optimize_topology_b.py  test_static_bandwidth.py  test_stress.py  test_sweep_reporting.py  test_topology_a.py  test_topology_b.py
